--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -139,7 +139,7 @@
               a {
                 text-decoration: underline;
                 color: #7d0706;
-              }
+              }../
 
               a:hover {
                 text-decoration: underline;
@@ -152,7 +152,7 @@
             <ul class="container2">
               <li>
                 Term paper: <i>Plains Cotton Cooperative Association (PCCA) Survey Report 2022</i> - [<a
-                  href="coursework/spring 2022/AAEC 5310 - Advanced market analysis/report/PCCA_report_final.pdf"
+                  href="../coursework/spring 2022/AAEC 5310 - Advanced market analysis/report/PCCA_report_final.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
             </ul>
@@ -162,7 +162,7 @@
                 Class presentation: <i><a href="https://www.aeaweb.org/articles?id=10.1257/jep.35.3.3" target="_blank"
                     rel="noopener noreferrer">Effects of the COVID-19 Recession on the US Labor Market: Occupation,
                     Family, and Gender</a></i> - [<a
-                  href="coursework/spring 2022/AAEC 6301 - Applied Macro/presentation.pdf" target="_blank"
+                  href="../coursework/spring 2022/AAEC 6301 - Applied Macro/presentation.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
             </ul>
@@ -171,7 +171,7 @@
               <li>
                 Class presentation: The Market (Israel Kirzner, <i>Market Theory and the Price System</i>, Ch. 2; Murray
                 Rothbard, <i>Man, Economy, and State</i>, Ch. 2) - [<a
-                  href="coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf" target="_blank"
+                  href="../coursework/spring 2022/BECO 5376 - Austrian Economics/presentation.pdf" target="_blank"
                   rel="noopener noreferrer" ]>PDF</a>]
               </li>
             </ul>
@@ -184,7 +184,7 @@
                 Class presentation:
                 <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
                   and Diabetes—A Two-Stage Difference-in-Difference</i>
-                (term paper) - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/presentation.pdf"
+                (term paper) - [<a href="../coursework/fall 2021/AAEC 5301 - Institutional Analysis/presentation.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li class="star">
@@ -192,10 +192,10 @@
                 <i>Low-Fat Diet on BMI, Obesity, Overweight, Blood Pressure,
                   and Diabetes—A Two-Stage Difference-in-Difference</i> (where PDF contains the final submission, ZIP
                 contains the original data, and R contains the R code used to clean the original data)
-                - [<a href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf" target="_blank"
+                - [<a href="../coursework/fall 2021/AAEC 5301 - Institutional Analysis/fbdg_finaldraft.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/Data.zip">ZIP</a>] [<a
-                  href="coursework/fall 2021/AAEC 5301 - Institutional Analysis/data_cleanup.Rmd">R</a>]
+                  href="../coursework/fall 2021/AAEC 5301 - Institutional Analysis/Data.zip">ZIP</a>] [<a
+                  href="../coursework/fall 2021/AAEC 5301 - Institutional Analysis/data_cleanup.Rmd">R</a>]
               </li>
             </ul>
             <h3>AAEC 6305 Economic Optimization</h3>
@@ -205,9 +205,9 @@
                 <a href="https://www.mathworks.com/products/optimization.html" target="_blank"
                   rel="noopener noreferrer">
                   Optimization toolbox</a>
-                - [<a href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf" target="_blank"
+                - [<a href="../coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/HW1_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/Homework1_Lim.mlx" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Homework 1/Homework1_Lim.mlx" target="_blank"
                   rel="noopener noreferrer">MATLAB</a>]
               </li>
               <li>
@@ -215,19 +215,19 @@
                 <a href="https://pfackler.wordpress.ncsu.edu/compecon/154-2/" target="_blank"
                   rel="noopener noreferrer">CompEcon toolbox</a>
                 developed by Paul Fackler and Mario Miranda - [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.pdf" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.mlx" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Homework 2/HW2_Lim.mlx" target="_blank"
                   rel="noopener noreferrer">MATLAB</a>]
               </li>
               <li>
                 Midterm (where MATLAB 1 contains the solution to the first
                 problem and MATLAB 2 to the second) - [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Lim.pdf" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_1.mlx" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_1.mlx" target="_blank"
                   rel="noopener noreferrer">MATLAB 1</a>] [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_2.mlx" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/Midterm/Midterm_Problem_2.mlx" target="_blank"
                   rel="noopener noreferrer">MATLAB 2</a>]
               </li>
               <li>
@@ -237,7 +237,7 @@
                 (Mete,
                 <a href="https://www.sciencedirect.com/science/article/abs/pii/S0925527309003582" target="_blank"
                   rel="noopener noreferrer">2010</a>) - [<a
-                  href="coursework/fall 2021/AAEC 6305 - Optimization/presentation/presentation.pdf" target="_blank"
+                  href="../coursework/fall 2021/AAEC 6305 - Optimization/presentation/presentation.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
             </ul>
@@ -247,9 +247,9 @@
                 Homework 1: Difference-in-difference exercise on minimum wage
                 and employment study in New Jersey and Pennsylvania (Card &
                 Krueger, <a href="https://www.nber.org/papers/w4509" target="_blank" rel="noopener noreferrer">1993</a>)
-                - [<a href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf" target="_blank"
+                - [<a href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim_code.Rmd" target="_blank"
+                  href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 1/HW1_Lim_code.Rmd" target="_blank"
                   rel="noopener noreferrer">R</a>]
               </li>
               <li>
@@ -257,9 +257,9 @@
                 NSW program study (Dehejia & Wahba,
                 <a href="https://econpapers.repec.org/article/tprrestat/v_3a84_3ay_3a2002_3ai_3a1_3ap_3a151-161.htm"
                   target="_blank" rel="noopener noreferrer">2002</a>) - [<a
-                  href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf" target="_blank"
+                  href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/HW2_LimDon.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/Homework2_Lim.Rmd" target="_blank"
+                  href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 2/Homework2_Lim.Rmd" target="_blank"
                   rel="noopener noreferrer">R</a>]
               </li>
               <li>
@@ -268,7 +268,7 @@
                 Hainmeuller,
                 <a href="https://www.tandfonline.com/doi/abs/10.1198/jasa.2009.ap08746" target="_blank"
                   rel="noopener noreferrer">2010</a>) - [<a
-                  href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 3/POLS 5385_Homework-3_Lim.html"
+                  href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 3/POLS 5385_Homework-3_Lim.html"
                   target="_blank" rel="noopener noreferrer">R</a>]
               </li>
               <li>
@@ -277,7 +277,7 @@
                 & Butler,
                 <a href="https://academic.oup.com/qje/article-abstract/119/3/807/1938834" target="_blank"
                   rel="noopener noreferrer">2004</a>) - [<a
-                  href="coursework/fall 2021/POLS 5385 - Causal Inference/Homework 4/Homework-4.html" target="_blank"
+                  href="../coursework/fall 2021/POLS 5385 - Causal Inference/Homework 4/Homework-4.html" target="_blank"
                   rel="noopener noreferrer">R</a>]
               </li>
             </ul>
@@ -291,14 +291,14 @@
                 analyzing the effect of education (as years of schooling) on
                 earnings (as hourly wages) (Card & Krueger,
                 <a href="https://www.jstor.org/stable/2117925" target="_blank" rel="noopener noreferrer">1995</a>) - [<a
-                  href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 1/Lab 1.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Lab 2: Estimating treatment effects assuming homogeneous and
                 heterogeneous effects of education on fertility for women of
                 childbearing age in Botswana - [<a
-                  href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 2/Lab 2.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 2/Lab 2.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
@@ -306,7 +306,7 @@
                 White's test, Breusch-Pagan test, and White's
                 Heteroskedasticity-Consistent Covariance Matrix (HCCM) for the
                 study of efficiency in the production of U.S. airline services
-                (Greene, 2007) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/Lab 3.pdf"
+                (Greene, 2007) - [<a href="../coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 3/Lab 3.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
@@ -314,14 +314,14 @@
                 unrelated regression (SUR) and simultaneous equations model
                 (SEM) developed by Muellbauer (1980a; 1980b) in order to model
                 a simplified version of a linear approximate almost ideal
-                demand system (LA/AIDS) - [<a href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/Lab 4.pdf"
+                demand system (LA/AIDS) - [<a href="../coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 4/Lab 4.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Lab 5: Estimation of panel data models using the pooled model,
                 fixed-effect model, or random-effects model regarding the
                 outcome of wages (Cornell & Rupert, 1988) - [<a
-                  href="coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/Lab 5.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 5303 - Econometrics II/Lab 5/Lab 5.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
             </ul>
@@ -329,24 +329,24 @@
             <ul class="container2">
               <li>
                 Homework 1: Calculus review - [<a
-                  href="coursework/spring 2021/AAEC 6311 - Production/Homework 1/AAEC5303_HW1_Lim.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 6311 - Production/Homework 1/AAEC5303_HW1_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 2: Rates of return, rate of technical substitution,
                 and the elasticity of demand - [<a
-                  href="coursework/spring 2021/AAEC 6311 - Production/Homework 2/AAEC6311_HW2_Lim.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 6311 - Production/Homework 2/AAEC6311_HW2_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 3: Profit under monopoly, Pareto optimal price and
                 quantity, monopsony, and general equilibrium - [<a
-                  href="coursework/spring 2021/AAEC 6311 - Production/Homework 3/AAEC6311_HW3_Lim.pdf" target="_blank"
+                  href="../coursework/spring 2021/AAEC 6311 - Production/Homework 3/AAEC6311_HW3_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 4: Social welfare, social costs, and marginal benefit
-                - [<a href="coursework/spring 2021/AAEC 6311 - Production/Homework 4/AAEC6311_HW_Lim.pdf"
+                - [<a href="../coursework/spring 2021/AAEC 6311 - Production/Homework 4/AAEC6311_HW_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
             </ul>
@@ -358,24 +358,24 @@
               <li>
                 Homework 1: Introduction to probability density functions and
                 calculating the rate of returns for the capital asset pricing
-                model (CAPM) - [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 1/AAEC_HW1_Lim.pdf"
+                model (CAPM) - [<a href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 1/AAEC_HW1_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 2: Best linear estimation, confidence intervals, and
-                matrix algebra - [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 2/AAEC_HW2_Lim.pdf"
+                matrix algebra - [<a href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 2/AAEC_HW2_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 3: Interpreting linear regression outputs,
                 calculating marginal effects, and constructing t-tests and
-                F-tests - [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 3/AAEC_HW3_Lim.pdf"
+                F-tests - [<a href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 3/AAEC_HW3_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
                 Homework 4: Alternative model testing, dummy variables as
                 slope and intercept shifters, and interpreting log-log
-                function models - [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 4/AAEC_HW4_Lim.pdf"
+                function models - [<a href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 4/AAEC_HW4_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
@@ -383,7 +383,7 @@
                 endogeneity affecting models (use of instrumental variables
                 and the Hausman test), and using the just-identified or
                 two-stage least squares method to estimate the parameters -
-                [<a href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 5/AAEC_HW5_Lim.pdf" target="_blank"
+                [<a href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 5/AAEC_HW5_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li>
@@ -391,18 +391,18 @@
                 computing the feasible generalized least squares (FGLS)
                 estimator, and checking for the presence of autocorrelation
                 errors in time-series data - [<a
-                  href="coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 6/AAEC_HW6_Lim.pdf" target="_blank"
+                  href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Homework 6/AAEC_HW6_Lim.pdf" target="_blank"
                   rel="noopener noreferrer">PDF</a>]
               </li>
               <li class="star">
                 Term paper: <i>Economic Freedom and COVID-19</i>. (where PDF contains
                 the final submission, ZIP contains the original data, and R
                 contains the R code used to clean the original data) - [<a
-                  href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
+                  href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/AAEC_TermProject_Lim.pdf"
                   target="_blank" rel="noopener noreferrer">PDF</a>] [<a
-                  href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/Original Data.zip" target="_blank"
+                  href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/Original Data.zip" target="_blank"
                   rel="noopener noreferrer">ZIP</a>] [<a
-                  href="coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/r_code.rmd" target="_blank"
+                  href="../coursework/fall 2020/AAEC 5307 - Econometrics I/Term Project/r_code.rmd" target="_blank"
                   rel="noopener noreferrer">R</a>]
               </li>
             </ul>
