--- a/pages/projects.html
+++ b/pages/projects.html
@@ -148,7 +148,7 @@
           </head>
           <h2>Projects</h2> <br />
           <h3>Master's thesis submitted in partial requirement at the CEVRO Institute</h3> <br />
-          <a href="research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i
+          <a href="../research/LimDon_WritingSample_Thesis.pdf" target="_blank" rel="noopener noreferrer"><i
               class="fa fa-fw fa-file-pdf" aria-hidden="true"></i>An Institutional Analysis on Open Source: How
             Developers
             Use Knowledge and Entrepreneurship in Communities</a><br /> <br />
