--- a/pages/samples.html
+++ b/pages/samples.html
@@ -193,15 +193,21 @@
                 target="_blank" rel="noopener noreferrer">Training decision tree, SVC, linear, and Lasso classifiers on
                 the UCI Mushroom dataset</a> (<a href="http://archive.ics.uci.edu/ml/datasets/Mushroom?ref=datanews.io"
                 target="_blank" rel="noopener noreferrer">Link</a>)</li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html">Training
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 3/Assignment/Assignment+3.html"
+              target="_blank" rel="noopener noreferrer">Training
                 dummy and SBC classifiers on fraud data</a></li>
-            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html">Training
+            <li><a href="../python/Coursera/3 Applied Machine Learning/Week 4/Assignment/Assignment+4.html"
+              target="_blank" rel="noopener noreferrer">Training
                 random forest classifier to predict blight ticket violations</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html">Cleaning and
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 1/Assignment/Assignment+1.html"
+              target="_blank" rel="noopener noreferrer">Cleaning and
                 sorting datetimes</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 2/Assignment/Assignment+2.html">Text parsing, lemmatization, and spell-checking of Moby Dick</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.html">Machine learning using logistic regression and count vectorizer to predict spam messages</a></li>
-            <li><a href="../python/Coursera/4 Applied Text Mining/Week 4/Assignment+4.html">Machine learning to compare similarities between documents and assigning them the correct topics</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 2/Assignment/Assignment+2.html"
+              target="_blank" rel="noopener noreferrer">Text parsing, lemmatization, and spell-checking of Moby Dick</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 3/Assignment/Assignment+3.html"
+              target="_blank" rel="noopener noreferrer">Machine learning using logistic regression and count vectorizer to predict spam messages</a></li>
+            <li><a href="../python/Coursera/4 Applied Text Mining/Week 4/Assignment+4.html
+              target="_blank" rel="noopener noreferrer"">Machine learning to compare similarities between documents and assigning them the correct topics</a></li>
           </ul>
           <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
