--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -147,31 +147,31 @@
             </style>
           </head>
           <h2>Python</h2>
-          <ul>
-            <li>Sep 2022 - Introduction to Data Science in Python (<a
-                href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank"
-                rel="noopener noreferrer">UHKNPYG352ZU</a>)</li>
-            <li>Oct 2022 - Applied Plotting, Charting & Data Representation in Python (<a
-                href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8" target="_blank"
-                rel="noopener noreferrer">MR6CRKMGMLF8</a>)</li>
-            <li>Nov 2022 - Applied Machine Learning in Python (<a
-                href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN" target="_blank"
-                rel="noopener noreferrer">V6RMP4DBA5XN</a>)</li>
-            <li>Dec 2022 - Applied Text Mining in Python (<a
-                href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank"
-                rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
-          </ul>
-          </p>
-          <p>
-            <h2>SQL</h2>
+            <ul>
+              <li>Sep 2022 - Introduction to Data Science in Python (<a
+                  href="https://www.coursera.org/account/accomplishments/verify/UHKNPYG352ZU" target="_blank"
+                  rel="noopener noreferrer">UHKNPYG352ZU</a>)</li>
+              <li>Oct 2022 - Applied Plotting, Charting & Data Representation in Python (<a
+                  href="https://www.coursera.org/account/accomplishments/verify/MR6CRKMGMLF8" target="_blank"
+                  rel="noopener noreferrer">MR6CRKMGMLF8</a>)</li>
+              <li>Nov 2022 - Applied Machine Learning in Python (<a
+                  href="https://www.coursera.org/account/accomplishments/verify/V6RMP4DBA5XN" target="_blank"
+                  rel="noopener noreferrer">V6RMP4DBA5XN</a>)</li>
+              <li>Dec 2022 - Applied Text Mining in Python (<a
+                  href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank"
+                  rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
+            </ul>
+          <h2>PHP</h2>
+            <ul>
+              <li>Feb 2023 - Building Web Applications in PHP (<a href="https://www.coursera.org/account/accomplishments/verify/LBJJ7Y3HQRXK">LBJJ7Y3HQRXK</a>)</li>
+            </ul>
+          <h2>SQL</h2>
             <ul>
               <li>Dec 2021 - Introduction to Structured Query Language (SQL) (<a
                   href="https://www.coursera.org/account/accomplishments/verify/GA25HJ4B4XRD" target="_blank"
                   rel="noopener noreferrer">GA25HJ4B4XRD</a>)</li>
             </ul>
-            <p>
-              <h2>Laserfiche</h2>
-            </p>
+          <h2>Laserfiche</h2>
             <ul>
               <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
               <li>Oct 20022 - <a href="../certs/LF_plat.pdf" target="_blank" rel="noopener noreferrer">Platinum</a></li>
