--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               Agricultural and Applied Economics</a> <br />
             Lubbock, Texas<br /><br />
             <b>M.A. Philosophy, Political Science, and Economics (PPE)</b><br />
-            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">Cevro
+            <a href="https://www.cevroinstitut.cz/en/" target="_blank" rel="noopener noreferrer">CEVRO
               Institute</a><br />
             School of Political Studies <br />
             Prague, Czech Republic<br /><br />
