--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+          <p class="author__bio">Analyst | Causal Inference and Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
@@ -147,7 +147,7 @@
             </style>
           </head>
           <h2>About Me</h2>
-          <p><br /> I am an IT professional with a background in causal inference and economics. Currently, I am
+          <p><br /> I am an analyst with a background in IT support, causal inference, and economics. Currently, I am
             interested in machine learning and data modeling, visualization, and prediction. <br />
             <h2>Education</h2><br />
             <b>M.S. Agricultural and Applied Economics</b><br />
