--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -146,6 +146,19 @@
               }
             </style>
           </head>
+          <h2>Django</h2>
+          <ul>
+            <li>Jun 2023 - Web Application Technologies and Django (<a href="https://www.coursera.org/account/accomplishments/verify/CY3BNRYF6LT7" target="_blank"
+              rel="noopener noreferrer">CY3BNRYF6LT7</a></li>
+          </ul>
+          <ul>
+            <li>Jun 2023 - Building Web Applications in Django (<a href="https://www.coursera.org/account/accomplishments/verify/Y3VNY2V5HQHS" target="_blank"
+              rel="noopener noreferrer">Y3VNY2V5HQHS</a></li>
+          </ul>
+          <ul>
+            <li>Jul 2023 - Django Features and Libraries (<a href="https://www.coursera.org/account/accomplishments/verify/MZBYC4JLPTX3" target="_blank"
+              rel="noopener noreferrer">MZBYC4JLPTX3</a></li>
+          </ul>
           <h2>Python</h2>
             <ul>
               <li>Sep 2022 - Introduction to Data Science in Python (<a
