--- a/pages/coursework.html
+++ b/pages/coursework.html
@@ -102,7 +102,7 @@
         </div>
         <div class="author__content">
           <h3 class="author__name">Don Lim</h3>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+          <p class="author__bio">Analyst | Causal Inference and Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
@@ -139,7 +139,7 @@
               a {
                 text-decoration: underline;
                 color: #7d0706;
-              }../
+              }
 
               a:hover {
                 text-decoration: underline;
