--- a/pages/projects.html
+++ b/pages/projects.html
@@ -102,7 +102,7 @@
         </div>
         <div class="author__content">
           <h2 class="author__name">Don Lim</h2>
-          <p class="author__bio">IT Professional | Causal Inference and Econometrics | Machine Learning | Data
+          <p class="author__bio">Analyst | Causal Inference and Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
         <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
