--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -150,14 +150,12 @@
           <ul>
             <li>Jun 2023 - Web Application Technologies and Django (<a href="https://www.coursera.org/account/accomplishments/verify/CY3BNRYF6LT7" target="_blank"
               rel="noopener noreferrer">CY3BNRYF6LT7</a>)</li>
-          </ul>
-          <ul>
             <li>Jun 2023 - Building Web Applications in Django (<a href="https://www.coursera.org/account/accomplishments/verify/Y3VNY2V5HQHS" target="_blank"
               rel="noopener noreferrer">Y3VNY2V5HQHS</a>)</li>
-          </ul>
-          <ul>
             <li>Jul 2023 - Django Features and Libraries (<a href="https://www.coursera.org/account/accomplishments/verify/MZBYC4JLPTX3" target="_blank"
               rel="noopener noreferrer">MZBYC4JLPTX3</a>)</li>
+            <li> July 2023 - Using JavaScript, JQuery, and JSON in Django (<a href="https://www.coursera.org/account/accomplishments/verify/PVM9LRM4JFYN" target="_blank"
+              rel="noopener noreferrer"></a>)</li>
           </ul>
           <h2>Python</h2>
             <ul>
