--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -155,7 +155,7 @@
             <li>Jul 2023 - Django Features and Libraries (<a href="https://www.coursera.org/account/accomplishments/verify/MZBYC4JLPTX3" target="_blank"
               rel="noopener noreferrer">MZBYC4JLPTX3</a>)</li>
             <li> July 2023 - Using JavaScript, JQuery, and JSON in Django (<a href="https://www.coursera.org/account/accomplishments/verify/PVM9LRM4JFYN" target="_blank"
-              rel="noopener noreferrer"></a>)</li>
+              rel="noopener noreferrer">PVM9LRM4JFYN</a>)</li>
           </ul>
           <h2>Python</h2>
             <ul>
@@ -171,6 +171,7 @@
               <li>Dec 2022 - Applied Text Mining in Python (<a
                   href="https://www.coursera.org/account/accomplishments/verify/WXVAJP7YR94W" target="_blank"
                   rel="noopener noreferrer">WXVAJP7YR94W</a>)</li>
+              <li>Aug 2023 - Applied Social Network Analysis in Python (<a href="https://www.coursera.org/account/accomplishments/verify/NUGCHH9ZJT9B" target="_blank" rel="noopener noreferrer">NUGCHH9ZJT9B</a>)</li>
             </ul>
           <h2>PHP</h2>
             <ul>
