--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <p class="author__bio">Analyst | Causal Inference | Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
-        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
+        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Contact</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
@@ -166,7 +166,6 @@
               and the Arts</a> <br />
             Ann Arbor, Michigan
           </p>
-          <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
           <script>
             ga('require', 'ipMeta', {
               serviceProvider: 'dimension1',
