--- a/pages/certifications.html
+++ b/pages/certifications.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Don Lim | Certifications</title>
+  <title>Don Lim | Portfolio</title>
   <link rel="icon" href="../photos/me.jpg" type="image/x-icon" />
   <meta property="og:locale" content="en-US">
   <meta property="og:site_name" content="Don Lim">
@@ -32,7 +32,7 @@
       a.async = 1;
       a.src = g;
       m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '../www.google-analytics.com/analytics.js', 'ga');
+    })(window, document, 'script', '../../www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-119324483-1', 'auto');
     ga('send', 'pageview');
   </script>
@@ -44,32 +44,32 @@
   </script> <!-- For all browsers -->
   <link rel="stylesheet" href="../assets/css/main.css">
   <meta http-equiv="cleartype" content="on"> <!-- start custom head snippets -->
-  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-touch-icon-76x76b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-touch-icon-120x120b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144x144b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152b32b.html?v=M44lzPylqQ">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180b32b.html?v=M44lzPylqQ">
-  <link rel="icon" type="image/png" href="images/favicon-32x32b32b.html?v=M44lzPylqQ" sizes="32x32">
+  <link rel="apple-touch-icon" sizes="57x57" href="../images/apple-touch-icon-57x57b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="60x60" href="../images/apple-touch-icon-60x60b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="72x72" href="../images/apple-touch-icon-72x72b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="76x76" href="../images/apple-touch-icon-76x76b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="114x114" href="../images/apple-touch-icon-114x114b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="120x120" href="../images/apple-touch-icon-120x120b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="144x144" href="../images/apple-touch-icon-144x144b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="152x152" href="../images/apple-touch-icon-152x152b32b.html?v=M44lzPylqQ">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/apple-touch-icon-180x180b32b.html?v=M44lzPylqQ">
+  <link rel="icon" type="image/png" href="../images/favicon-32x32b32b.html?v=M44lzPylqQ" sizes="32x32">
   <link rel="icon" type="image/png" href="images/android-chrome-192x192b32b.html?v=M44lzPylqQ" sizes="192x192">
-  <link rel="icon" type="image/png" href="images/favicon-96x96b32b.html?v=M44lzPylqQ" sizes="96x96">
-  <link rel="icon" type="image/png" href="images/favicon-16x16b32b.html?v=M44lzPylqQ" sizes="16x16">
+  <link rel="icon" type="image/png" href="../images/favicon-96x96b32b.html?v=M44lzPylqQ" sizes="96x96">
+  <link rel="icon" type="image/png" href="../images/favicon-16x16b32b.html?v=M44lzPylqQ" sizes="16x16">
   <link rel="manifest" href="https://donlim93.github.io/images/manifest.json?v=M44lzPylqQ">
   <link rel="mask-icon" href="https://donlim93.github.io/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
-  <link rel="shortcut icon" href="images/faviconb32b.html?v=M44lzPylqQ">
+  <link rel="shortcut icon" href="../images/faviconb32b.html?v=M44lzPylqQ">
   <meta name="msapplication-TileColor" content="#000000">
   <meta name="msapplication-TileImage" content="https://donlim93.github.io/images/mstile-144x144.png?v=M44lzPylqQ">
   <meta name="msapplication-config" content="https://donlim93.github.io/images/browserconfig.xml?v=M44lzPylqQ">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="assets/css/academicons.css" />
+  <link rel="stylesheet" href="../assets/css/academicons.css" />
   <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
   </script>
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$','$'], ["\\(","\\)"] ], processEscapes: true } }); </script>
-  <script src="../cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML"
+  <script src="../../cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJaxdda6.js?config=TeX-AMS-MML_HTMLorMML"
     type="text/javascript"></script> <!-- end custom head snippets -->
 </head>
 
@@ -82,9 +82,9 @@
             <div class="navicon"></div>
           </button>
           <ul class="visible-links">
-            <li class="masthead__menu-item masthead__menu-item--lg"><a href="https://donlim93.github.io/">Don Lim</a>
+            <li class="masthead__menu-item masthead__menu-item--lg"><a href="../index.html">Don Lim</a>
             </li>
-            <li class="masthead__menu-item"><a href="https://donlim93.github.io/">Home</a></li>
+            <li class="masthead__menu-item"><a href="../index.html">Home</a></li>
             <li class="masthead__menu-item"><a href="../pages/projects.html">Projects</a></li>
             <li class="masthead__menu-item"><a href="../pages/coursework.html">Coursework</a></li>
             <li class="masthead__menu-item"><a href="../pages/certifications.html">Certifications</a></li>
@@ -101,11 +101,11 @@
         <div class="author__avatar"> <img src="../images/me.jpg" class="author__avatar" alt="Don Lim">
         </div>
         <div class="author__content">
-          <h2 class="author__name">Don Lim</h2>
-          <p class="author__bio">Analyst | Causal Inference and Econometrics | Machine Learning | Data
+          <h3 class="author__name">Don Lim</h3>
+          <p class="author__bio">Analyst | Causal Inference | Econometrics | Machine Learning | Data
             Visualization</p>
         </div>
-        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Follow</button>
+        <div class="author__urls-wrapper"> <button class="btn btn--inverse">Contact</button>
           <ul class="author__urls social-icons">
             <li><a href="tel:806-317-7937" target="_blank"><i class="fa fa-fw fa-phone"></i>806-317-7937</a></li>
             <li><a href="mailto:lim.don93@gmail.com" target="_blank"><i class="fa fa-fw fa-envelope-square"
@@ -188,17 +188,16 @@
               <li>Jun 2022 - <a href="../certs/LF_gold.pdf" target="_blank" rel="noopener noreferrer">Gold</a> </li>
               <li>Oct 20022 - <a href="../certs/LF_plat.pdf" target="_blank" rel="noopener noreferrer">Platinum</a></li>
             </ul>
-            <!-- **Contact Information**<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-envelope" aria-hidden="true" big-icon></i> </span><div>lim.don93@gmail.com</div></li><li> <span class="fa-li"><i class="fa fa-phone" aria-hidden="true" big-icon></i> </span><div> (615) 875-8448</div></li><li><span class="fa-li"> <i class="fa fa-building" big-icon> </i></span><div>405 Calhoun Hall, Vanderbilt University, Nashville, TN 37235</div></li></ul>-->
-            <script>
-              ga('require', 'ipMeta', {
-                serviceProvider: 'dimension1',
-                networkDomain: 'dimension2',
-                networkType: 'dimension3',
-              });
-              ga('ipMeta:loadNetworkFields');
-              ga('send', 'pageview');
-            </script> <!-- IpMeta must be included after Google Analytics -->
-            <script async="" src="../ipmeta.io/plugin.js"></script>
+          <script>
+            ga('require', 'ipMeta', {
+              serviceProvider: 'dimension1',
+              networkDomain: 'dimension2',
+              networkType: 'dimension3',
+            });
+            ga('ipMeta:loadNetworkFields');
+            ga('send', 'pageview');
+          </script> <!-- IpMeta must be included after Google Analytics -->
+          <script async="" src="../../ipmeta.io/plugin.js"></script>
         </section>
         <footer class="page__meta"></footer>
       </div>
@@ -255,7 +254,7 @@
       <div class="page__footer-copyright">&copy; 2023 Don Lim.</div>
     </footer>
   </div>
-  <script src="assets/js/main.min.js"></script>
+  <script src="../assets/js/main.min.js"></script>
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
@@ -270,7 +269,7 @@
     ga('create', 'UA-119324483-1', 'auto');
     ga('send', 'pageview');
   </script>
-  <script src="js/scroll.js"></script>
+  <script src="../js/scroll.js"></script>
 </body>
 
 </html>
